feat: 第 19 章 项目收尾管理

--- a/第 20 章 知识产权管理.md
+++ b/第 20 章 知识产权管理.md
@@ -22,21 +22,25 @@
 
 专利权是国家按专利法授予申请人在一定时间内对其<font color='red'>发明创造成果</font>所享有的独占使用和处分的权利。
 
-专利权人的权利
+##### 专利权人的权利
+
 独占实施权
 转让权
 实施许可权
 
-专利权人的务
+##### 专利权人的务
+
 按规定缴纳专利年费的义务
 不得滥用专利权的义务
 
-专利权的期限、终止和无效
+##### 专利权的期限、终止和无效
+
 发明专利权的期限为 <font color='red'>20</font> 年，实用新型专利权、外观设计专利权的期限为 <font color='red'>10</font> 年，均自申请日起计算。
 
 ##### 20.2.3 商标权 P592
 
 商标是指能够将不同的经营者所提供的商品或者服务区别开来，并可被视觉所感知的标记。
+
 商标权也称<font color='red'>品牌</font>，是指商标注册人在法定期限内对其注册商标所享有的受国家法律保护的各种权利，注册商标和非注册商标具有不同的法律地位。
 
 注册商标的有效期为 <font color='red'>10</font> 年，自核准注册之日起计算。
