--- a/第 21 章 法律法规和标准规范.md
+++ b/第 21 章 法律法规和标准规范.md
@@ -18,23 +18,26 @@
 
 ##### 22.7.2 信息系统集成项目管理常用的技术标准 P605
 
-基础标准
+##### 基础标准
 
 《GB/T 11457-2006 <font color='red'>信息技术</font>软件工程术语》
 《GB/T 1526-1989 <font color='red'>信息处理</font>数据流程图 程序流程图 系统流程图 程序网络图和系统资源图的文件编辑符号及规定》
 《GB/T 14085-1993 <font color='red'>信息处理</font>系统计算机系统配置图符号及约定》
 
-开发标准
+##### 开发标准
+
 《GB/T 8566-2007 信息技术<font color='red'>软件</font>生存周期过程》
 《GB/T 15853-1995 <font color='red'>软件</font>支持环境》
 《GB/T 14079-1993 <font color='red'>软件</font>维护指南》
 
-文档标准
+##### 文档标准
+
 《GB/T 16680-1996 信息技术<font color='red'>软件文档</font>管理指南》
 《GB/T 8567-2006 计算机<font color='red'>软件文档</font>编制规范》
 《GB/T 9385-2008 计算机<font color='red'>软件需求规格说明书</font>规范》
 
-管理标准
+##### 管理标准
+
 《GB/T 12505-1990 计算机软件<font color='red'>配置管理</font>计划规范》
 《GB/T 12504-1990 计算机软件<font color='red'>质量保证</font>计划规范》
 《GB/T 14394-2008 计算机软件<font color='red'>可靠性与可维护性管理</font>》
