feat: 第 18 章 项目风险管理.md

--- a/第 21 章 法律法规和标准规范.md
+++ b/第 21 章 法律法规和标准规范.md
@@ -1,10 +1,10 @@
 ## 第 21 章 法律法规和标准规范
 
-##### 21.6.1 标准和标准化常识 P601
+##### 21.6.1 标准和标准化常识
 
 标准是<font color='red'>对重读重复性事物和概念所做的统一规定</font>，它以科学、技术和实践经验的综合成果为基础，经有关方面协商一致，由主管机构批准，以特定形式发布，作为共同遵守的准则和依据是一致同意建立并由公认的机构批准的文本，具有可重复使用的规则、指南、活动或结果特征，目的是在特定的背景下达到最佳的秩序。
 
-##### 21.6.4 我国标准的代号和名称 P604
+##### 21.6.4 我国标准的代号和名称
 
 强制性国家标准 - <font color='red'>GB</font>
 推荐性国家标准 - <font color='red'>GB/T</font>
@@ -12,11 +12,11 @@
 国军标 - <font color='red'>GJB</font>
 国实标 - <font color='red'>GSB</font>
 
-##### 21.6.5 国家标准有效期 P604
+##### 21.6.5 国家标准有效期
 
 一般为 <font color='red'>5</font> 年
 
-##### 22.7.2 信息系统集成项目管理常用的技术标准 P605
+##### 22.7.2 信息系统集成项目管理常用的技术标准
 
 ##### 基础标准
 
