--- a/第 20 章 知识产权管理.md
+++ b/第 20 章 知识产权管理.md
@@ -1,24 +1,24 @@
 ## 第 20 章 知识产权管理
 
-##### 20.1.1 知识产权的基本概念与范围 P584
+##### 20.1.1 知识产权的基本概念与范围
 
 知识产权是对<font color='red'>智力劳动成果</font>所享有的占有、使用、处分和收益的权益。
 广义的包括著作权、邻接权、专利权、商标权及商业秘密权、防止不正当竞争权、植物新品种权、集成电路布图设计权和地理标志权等。
 狭义的包括<font color='red'>著作权（含邻接权）</font>、<font color='red'>专利权</font>、<font color='red'>商标权</font>三个主要组成部分。
 
-##### 20.1.2 知识产权的特性 P584
+##### 20.1.2 知识产权的特性
 
 <font color='red'>无体性</font>
 <font color='red'>专有性</font>
 <font color='red'>地域性</font>
 <font color='red'>时间性</font>
 
-##### 20.2.1 著作权及邻接权 P585
+##### 20.2.1 著作权及邻接权
 
 著作权也称<font color='red'>版权</font>，是指基于文学、艺术和科学作品依法产生的权利。
 属知识产权范畴，保护期为 <font color='red'>50</font> 年，即截止到作品首次发表后第 50 年的 12 月 31 日。
 
-##### 20.2.2 专利权 P589
+##### 20.2.2 专利权
 
 专利权是国家按专利法授予申请人在一定时间内对其<font color='red'>发明创造成果</font>所享有的独占使用和处分的权利。
 
@@ -37,7 +37,7 @@
 
 发明专利权的期限为 <font color='red'>20</font> 年，实用新型专利权、外观设计专利权的期限为 <font color='red'>10</font> 年，均自申请日起计算。
 
-##### 20.2.3 商标权 P592
+##### 20.2.3 商标权
 
 商标是指能够将不同的经营者所提供的商品或者服务区别开来，并可被视觉所感知的标记。
 
@@ -45,7 +45,7 @@
 
 注册商标的有效期为 <font color='red'>10</font> 年，自核准注册之日起计算。
 
-##### 20.4 知识产权相关法律法规 P596
+##### 20.4 知识产权相关法律法规
 
 <font color='red'>著作权法</font>
 <font color='red'>专利权法</font>
