--- a/世界上最神奇的24堂课/1.发现你内在的力量.md
+++ b/世界上最神奇的24堂课/1.发现你内在的力量.md
@@ -4,33 +4,33 @@
 
 无需去获取这种力量，你已经拥有它。应该去发现它，去运用它，去掌控它。
 
-外在的条件、客观的环境、生活的际遇，是心态创造出来的。
+**外在的条件、客观的环境、生活的际遇，是心态创造出来的。**
 
 我们的所思所想，决定着我们的心态。
 
 想要什么样的结果，取决于我们想什么结果，在于我们的思维方式，一切力量皆源自于内心。
 
-内在世界由精神统治，外在世界是内在世界的映射。
+**内在世界由精神统治，外在世界是内在世界的映射。**
 
 内在世界服从于我们的掌控，一切力量和财富的规律也就尽在我们的掌握之中了。
 
 相由心生，我们认识的内在世界，会映射在外在世界中。外在世界，反映出内在世界的意识情形。
 
-控制自己的思想，由自己决定内在世界的最佳状态反映在外在世界中。
+**控制自己的思想，由自己决定内在世界的最佳状态反映在外在世界中。**
 
 生命，不是一个从无到有的过程，而是一个逐渐展开的过程。
 
 一切财富，都建立在认知的基础之上。所得，皆是认知累积的结果。所失，皆是认知耗散的结果。
 
-获得力量的人，要与自然法则和谐共处。道法自然。
+**获得力量的人，要与自然法则和谐共处。道法自然。**
 
 大脑是一个器官，把身体的各个部位联系在一起。对视觉、听觉、味觉、嗅觉、触觉、本体感觉、前庭感觉做出反应。
 
-与内在世界的连结是通过潜意识建立的。
+**与内在世界的连结是通过潜意识建立的。**
 
 你的认知必须同宇宙意念相一致，就是万念归一。
 
-"想法"是由心智产生的。心智是静止的，想法是动态的，心智和想法是同一事物的不同阶段。
+**"想法"是由心智产生的。心智是静止的，想法是动态的，心智和想法是同一事物的不同阶段。**
 
 当思考的时候，想法被心智推动，在客观世界、外在环境中体现出来。
 
@@ -38,11 +38,11 @@
 
 在任何境况中控制自己的想法产生令人满意的外部环境。
 
-内在世界是因，外在世界是果；想要改变结果，必须从根源做起。
+**内在世界是因，外在世界是果；想要改变结果，必须从根源做起。**
 
 认知是个体与因果关系交互作用的体现。
 
-先有意念；万事因意念而立。
+**先有意念；万事因意念而立。**
 
 【付诸实践】
 
