--- a/易经/入门学习教程/2.五行河图洛书.md
+++ b/易经/入门学习教程/2.五行河图洛书.md
@@ -1,6 +1,6 @@
-## 2. 五行河图洛书
+## 2. 五行、河图、洛书、文王八卦、体与用
 
-### 2.1 五行的基础知识
+### 2.1 五行
 
 五行就是**水、火、木、金、土**，最早的文字记载是《尚书·洪范》
 
@@ -41,3 +41,93 @@
 这儿的四季是指四个“季月”，也就是季春、季夏、季秋、季冬这四个月。
 
 长夏是指夏季的最后 18 天，也有资料说是大暑到秋分这段时间。
+
+### 2.2 河图
+
+```
+          7
+          2
+
+83       5-10       49
+
+          1
+          6
+```
+
+河图是伏羲记录黄河出现的龙马身上所负的图案，与八卦相结合，使八卦与五行融合在一起。
+
+**河图的最大作用就是在八卦和五行之间架起了一座桥梁。**
+
+河图里有黑点和白点之分，**黑点代表“阴数”（即偶数），白点代表“阳数”（即奇数）。**
+
+河图共有 10 组，下面两组为（1 和 6），上面两组（2 和 7），左边两组为（3 和 8），右边两组为（4 和 9），中间两组为 5 和 10。
+
+从这儿开始，我们要引出易经的方位（即东西南北中）。
+
+易经的方位画在纸上正好和我们日常习惯相反。远古的盘古氏是仰观天象。
+
+**天一生水，地二生火，天三生木，地四生金。地六成水，天七成火，地八成木，天九成金，天五生土，地十成之。**
+
+这样就将五行的方位确定了下来，**北方水、南方火、东方木、西方金，中间为土。**
+
+天一生水，地六成之，所以一是生数、六是成数；地二生火，地七成之，所以二是生数、七是成数，
+
+同理类推得出，1、2、3、4、5 为生数，6、7、8、9、10 为成数。
+
+### 2.3 洛图
+
+传说大禹治水时有神龟出于洛水，其背有文，
+
+九文近头，一文近尾，三文近左肋，七文近右肋，四文近左肩，二文近右肩，六文近右足，八文近左足，五文在背中，其位九，象九宫，中五又象太极，中一文又象一气；
+
+其形方，方象地。
+
+**古人观察天形象时发现这个龟纹与九宫内容相印。**
+
+**九宫又称“太一九宫”，太一就是北辰星或北极星，位居天宫正中，四方四维（东南西北即四方，东南、西南、西北、东北即四维）为八个卦神所居。**
+
+仍然由黑点和白点通过连线分组而成，这样得到的九个数，除中宫五不用之外，其它八个与易数相关联，就得出了后天八卦的方位结构。
+
+**九宫数既然代表天象，在应用中是转动的，中宫不动，其它八个数按逆时针转动。**建议大家记住四周的八个数就可以：1、6、7、2、9、4、3、8
+
+### 2.4 文王八卦
+
+文王八卦也称“后天八卦”，早在商朝就已经有了，因文王演绎并增加了卦辞，后人一般就认为是文王所作。
+
+**先天是万物初创，后天是万物发展，所以先天数一般用于起卦，以此演示万物的生成，后天数则反映事物的变化，一般用于标注变化后的对应位置。**
+
+**因此先天没有方位，只有后天才有方位。**
+
+“天之阳在南而阴在北，地之阴在南而阳在北。天之阳在南，故日处之；地之刚在北，故山处之。所以地高西北，天高东南也。”这句话解释了坎离二卦的位置，以及天倾西北、地陷东南的原因。
+
+“易者，一阴一阳之谓也。震兑始交也，故当朝夕之位。”这句是解释震东兑西的原因。
+
+八卦也有五行，其中**水：坎、木：震巽、火：离、土：艮坤、金：乾兑。**
+
+### 2.5 体与用
+
+质量和能量可以相互转化，质能守恒定律告诉我们，质能总和不变。
+
+在易经中也有类似的“定律”，这就是“体用定律”。
+
+**“体”是指事物的本体，“用”是指作用、应用、发展、变化等。**
+
+火生于动，水生于静。动静相生、水火相息。水火为用，草木为体。用生于利，体生于害。利害表现在感情之上，而体用隐藏于性情之中。
+
+**火本无体，通过草木燃烧后才有体。**草木燃烧前处于静的状态，尚未有用，待火燃起之后才有了用，所以凡是有体之物都可以被焚烧。
+
+**水也有体，那么水能够被燃烧吗？**这儿我们要深入了解五行的特性。
+
+火的性质，遇水之后能与之对立而不能与之相随，所以火遇与水则灭；
+
+水的性质，遇火之后能与之相随而不能与之对立，所以水遇火烧煮之后而变热。
+
+这就是世上有热水而没有凉火的原因。
+
+火以用为始，以体为终，所以火是动态的；
+
+水以体为始，而以用为终，所以水是静态的。
+
+**火也有体，水也有用，二者既相济又相息。**
+
+如果明白这个道理，世界上许多矛盾的东西都可以化害为利，就看人如何去应用。
