--- a/世界上最神奇的24堂课/1.发现你内在的力量.md
+++ b/世界上最神奇的24堂课/1.发现你内在的力量.md
@@ -44,11 +44,11 @@
 
 **先有意念；万事因意念而立。**
 
-【付诸实践】
+【付诸实践】控制自己的身体
 
 选一间可以独处、不受打扰的房间，坐直，保持身体放松，但不要懒洋洋地靠着。
 
-任思绪徜徉到能够达到完美静止的地方，持续一刻钟或半小时；
+**任思绪徜徉到能够达到完美静止的地方**，持续一刻钟或半小时；
 
 连续做三四天或一个礼拜，直到你获得对身体的完全控制为止。
 
